; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_sys.c_sysdev_class_store.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_sys.c_sysdev_class_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kobject = type { i32 }
%struct.attribute = type { i32 }
%struct.sysdev_class = type { i32 }
%struct.sysdev_class_attribute = type { i32 (%struct.sysdev_class.0*, i8*, i64)* }
%struct.sysdev_class.0 = type opaque

@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kobject*, %struct.attribute*, i8*, i64)* @sysdev_class_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sysdev_class_store(%struct.kobject* %0, %struct.attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.kobject*, align 8
  %7 = alloca %struct.attribute*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.sysdev_class*, align 8
  %11 = alloca %struct.sysdev_class_attribute*, align 8
  store %struct.kobject* %0, %struct.kobject** %6, align 8
  store %struct.attribute* %1, %struct.attribute** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load %struct.kobject*, %struct.kobject** %6, align 8
  %13 = call %struct.sysdev_class* @to_sysdev_class(%struct.kobject* %12)
  store %struct.sysdev_class* %13, %struct.sysdev_class** %10, align 8
  %14 = load %struct.attribute*, %struct.attribute** %7, align 8
  %15 = call %struct.sysdev_class_attribute* @to_sysdev_class_attr(%struct.attribute* %14)
  store %struct.sysdev_class_attribute* %15, %struct.sysdev_class_attribute** %11, align 8
  %16 = load %struct.sysdev_class_attribute*, %struct.sysdev_class_attribute** %11, align 8
  %17 = getelementptr inbounds %struct.sysdev_class_attribute, %struct.sysdev_class_attribute* %16, i32 0, i32 0
  %18 = load i32 (%struct.sysdev_class.0*, i8*, i64)*, i32 (%struct.sysdev_class.0*, i8*, i64)** %17, align 8
  %19 = icmp ne i32 (%struct.sysdev_class.0*, i8*, i64)* %18, null
  br i1 %19, label %20, label %29

20:                                               ; preds = %4
  %21 = load %struct.sysdev_class_attribute*, %struct.sysdev_class_attribute** %11, align 8
  %22 = getelementptr inbounds %struct.sysdev_class_attribute, %struct.sysdev_class_attribute* %21, i32 0, i32 0
  %23 = load i32 (%struct.sysdev_class.0*, i8*, i64)*, i32 (%struct.sysdev_class.0*, i8*, i64)** %22, align 8
  %24 = load %struct.sysdev_class*, %struct.sysdev_class** %10, align 8
  %25 = bitcast %struct.sysdev_class* %24 to %struct.sysdev_class.0*
  %26 = load i8*, i8** %8, align 8
  %27 = load i64, i64* %9, align 8
  %28 = call i32 %23(%struct.sysdev_class.0* %25, i8* %26, i64 %27)
  store i32 %28, i32* %5, align 4
  br label %32

29:                                               ; preds = %4
  %30 = load i32, i32* @EIO, align 4
  %31 = sub nsw i32 0, %30
  store i32 %31, i32* %5, align 4
  br label %32

32:                                               ; preds = %29, %20
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local %struct.sysdev_class* @to_sysdev_class(%struct.kobject*) #1

declare dso_local %struct.sysdev_class_attribute* @to_sysdev_class_attr(%struct.attribute*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
